--- a/index.html
+++ b/index.html
@@ -35,10 +35,17 @@
 		<div class='v-block -second'>
 			<h2 class='v-block__title'>Нечистая сила: как бороться?</h2>
 			<div class='v-block__title-desc'>От нечисти не существует универсальной защиты: для борьбы с одними ее порождениями достаточно прочесть молитву, изгнание других требует обстоятельного магического ритуала. Чтобы разобраться, как именно бороться, в первую очередь нужно понять, с каким сверхъестественным существом вы столкнулись.</div>
+		</div>
 
-			<div class='v-block__item'>
-				<div class='v-block__item__wrapper'>
-				<div class='v-block__item-img v-img-first'><img src='img/dom.png' alt=''></div>
+		<div class="v-block-second-i v-clearfix">
+			<div id="v-domovoy">
+				<div class="v-img-icons">
+					<div class='v-img-icons__item'></div>
+					<div class='v-img-icons__item'><img src="img/i-dom/1.png" alt=""></div>
+					<div class='v-img-icons__item'><img src="img/i-dom/2.png" alt=""></div>
+				</div>
+				<div class='v-block__item-wrapper'>
+				<div class='v-block__item'>
 				<div class='v-block__item-title'>домовой</div>
 				<div class='v-block__item-text'>Промежуточное состояние между нечистой силой и добрыми сверхъестественными помощниками человека. Обычно домовым считался предок рода.</div>
 				<div class='v-block__item-label v-label'>
@@ -48,58 +55,69 @@
 			    </p>
 			  </div>
 				</div>
-			</div>
-
-			<div class='v-block__item'>
-				<div class='v-block__item__wrapper'>
-				<div class='v-block__item-img v-img-second'><img src='img/rus.png' alt=''></div>
-				<div class='v-block__item-title'>русалка</div>
-				<div class='v-block__item-text'>Промежуточное состояние между нечистой силой и добрыми сверхъестественными помощниками человека. Обычно домовым считался предок рода.</div>
-				<div class='v-block__item-label v-label'>
-					<span class='v-label__title'>Как бороться?</span>
-			    <p class='v-label__text'>
-			      Если в лесу или неподалеку от водоема встретите русалку, нужно бросить платок, гребень или что-нибудь из одежды. При этом ни в коем случае нельзя смотреть русалкам в глаза.
-			    </p>
-			  </div>
 				</div>
 			</div>
 
-			<div class='v-block__item'>
-				<div class='v-block__item__wrapper'>
-				<div class='v-block__item-img v-img-third'><img src='img/dem.png' alt=''></div>
-				<div class='v-block__item-title'>демоны и бесы</div>
-				<div class='v-block__item-text'>Промежуточное состояние между нечистой силой и добрыми сверхъестественными помощниками человека. Обычно домовым считался предок рода.</div>
-				<div class='v-block__item-label v-label'>
-					<span class='v-label__title'>Как бороться?</span>
-					<p class='v-label__text'>
-						Если в лесу или неподалеку от водоема встретите русалку, нужно бросить платок, гребень или что-нибудь из одежды. При этом ни в коем случае нельзя смотреть русалкам в глаза.
-					</p>
+			<div id="v-rusalka">
+				<div class='v-block__item-wrapper'>
+					<div class='v-block__item v-float-right' >
+					<div class='v-block__item-title'>русалка</div>
+					<div class='v-block__item-text'>Промежуточное состояние между нечистой силой и добрыми сверхъестественными помощниками человека. Обычно домовым считался предок рода.</div>
+					<div class='v-block__item-label v-label'>
+						<span class='v-label__title'>Как бороться?</span>
+				    <p class='v-label__text'>
+				      Если в лесу или неподалеку от водоема встретите русалку, нужно бросить платок, гребень или что-нибудь из одежды. При этом ни в коем случае нельзя смотреть русалкам в глаза.
+				    </p>
+				  </div>
+					</div>
+				</div>
+				</div>
+				<div class='v-clearfix'></div>
+
+			<div id="v-demon">
+				<div class='v-block__item-wrapper'>
+					<div class='v-block__item'>
+					<div class='v-block__item-title'>демоны и бесы</div>
+					<div class='v-block__item-text'>Промежуточное состояние между нечистой силой и добрыми сверхъестественными помощниками человека. Обычно домовым считался предок рода.</div>
+					<div class='v-block__item-label v-label'>
+						<span class='v-label__title'>Как бороться?</span>
+						<p class='v-label__text'>
+							Если в лесу или неподалеку от водоема встретите русалку, нужно бросить платок, гребень или что-нибудь из одежды. При этом ни в коем случае нельзя смотреть русалкам в глаза.
+						</p>
+					</div>
+				</div>
 				</div>
 			</div>
-			</div>
 
-			<div class='v-block__item'>
-				<div class='v-block__item__wrapper'>
-				<div class='v-block__item-img v-img-fourth'><img src='img/obor.png' alt=''></div>
-				<div class='v-block__item-title'>оборотень</div>
-				<div class='v-block__item-text'>Промежуточное состояние между нечистой силой и добрыми сверхъестественными помощниками человека. Обычно домовым считался предок рода.</div>
-				<div class='v-block__item-label v-label'>
-					<span class='v-label__title'>Как бороться?</span>
-					<p class='v-label__text'>
-						Если в лесу или неподалеку от водоема встретите русалку, нужно бросить платок, гребень или что-нибудь из одежды. При этом ни в коем случае нельзя смотреть русалкам в глаза.
-					</p>
+			<div class='v-clearfix'></div>
+
+			<div id="v-oboroten">
+				<div class='v-block__item-wrapper'>
+					<div class='v-block__item v-float-right' >
+					<div class='v-block__item-title'>оборотень</div>
+					<div class='v-block__item-text'>Промежуточное состояние между нечистой силой и добрыми сверхъестественными помощниками человека. Обычно домовым считался предок рода.</div>
+					<div class='v-block__item-label v-label'>
+						<span class='v-label__title'>Как бороться?</span>
+						<p class='v-label__text'>
+							Если в лесу или неподалеку от водоема встретите русалку, нужно бросить платок, гребень или что-нибудь из одежды. При этом ни в коем случае нельзя смотреть русалкам в глаза.
+						</p>
+					</div>
+				</div>
 				</div>
 			</div>
-			</div>
 
+		</div>
+
+
+		<div class="v-block-second-v">
 			<div class='v-block__test'>
 				<a href='#' class='v-block__test-link'><span>Пройди тест</span></a>
 				<span>и узнай какая ты нечисть</span>
 			</div>
 
-			<div class='v-block__item-vamp'>
-				<div class='v-block__item-vamp__wrapper'>
-				<div class='v-block__item-img v-img-fifth'><img src='img/vamp.png' alt=''></div>
+			<div class='v-block__item-v'>
+				<div class='v-block__item-v__wrapper'>
+				<!-- <div class='v-block__item-img v-img-fifth'><img src='img/v.png' alt=''></div> -->
 				<div class='v-block__item-title'>вампиры</div>
 				<div class='v-block__item-text'>
 					<p>Рассказы о мертвецах, проливающих кровь, найдены почти во всех культурах по всему миру, включая самые древние.  Вампиры или вурдалаки – ожившие мертвецы, нередко принимающие обличие летучей мыши и питающиеся людской кровью. Имен у вампиров много. В русской традиции их называют «упырь», а с легкой подачи А.С. Пушкина и его одноименного стихотворения 1836 года – «Вурдалак».</p>
@@ -108,18 +126,17 @@
 		  </div>
 			</div>
 
-			<div class='v-block__item-vamp v-clearfix'>
-				<div class='v-block__item-vamp__wrapper'>
-				<div class='v-block__item-img v-img-sixth'><img src='img/vamp2.png' alt=''></div>
+			<div class='v-block__item-v v-clearfix'>
+				<div class='v-block__item-v__wrapper'>
 				<div class='v-block__item-text'>
 					<p>Но после появления произведения «Вампир» авторства Джона Полидори, где главному герою, вампиру, естественно, был придан романтичный облик, имидж вампиров претерпел значительные изменения. Джон Полидори, личный врач лорда Байрона, взял многие черты из облика своего нанимателя и пациента, и в его интерпретации зловещий вампир стал аристократом и обладателем горящего взгляда, спутанных черных волос и интересной бледности. Сущность его это не изменило, он также, как и канонические вампиры, пил кровь, но выглядел уже не столь отталкивающим.</p>
 					<p>Именно в таком виде вампиры и перекочевали в литературу, а позже и в кино XX и XXI веков.</p>
 				</div>
 			</div>
 			<div class='v-clearfix'></div>
-			<div class='v-block__item-vamp-label v-vamp-label'>
-				<span class='v-vamp-label__title'>Как бороться с вампирами?</span>
-				<p class='v-vamp-label__text'>
+			<div class='v-block__item-v-label v-v-label'>
+				<span class='v-v-label__title'>Как бороться с вампирами?</span>
+				<p class='v-v-label__text'>
 					Все вампиры по поверьям боятся чеснока, солнечного света, распятия и осинового кола, забитого в сердце. Также считается, что помочь от вампира может стебель дикой розы, боярышник или алоэ, повешенный за дверью.
 				</p>
 			</div>
@@ -146,35 +163,35 @@
 				  <div class='v-facts__item'>
 				    <img src='img/slider1.png'>
 				    <div class='v-facts__desc'>
-							<div class='v-facts__text'>Считается, что порог дома обладает символической силой, поэтому вампир не может его переступить без приглашения хозяина дома.</div>
+							<div class='v-facts__text v-fade'>Считается, что порог дома обладает символической силой, поэтому вампир не может его переступить без приглашения хозяина дома.</div>
 				    </div>
 				  </div>
 
 				  <div class='v-facts__item'>
 				    <img src='img/dem.png'>
 						<div class='v-facts__desc'>
-							<div class='v-facts__text'>Далеко-далеко за словесными горами в стране, гласных и согласных живут рыбные тексты. Буквоград всеми имеет маленький возвращайся жаренные, маленькая не продолжил над дорогу она большого ему они моей осталось языкового взгляд коварный.</div>
+							<div class='v-facts__text v-fade'>Далеко-далеко за словесными горами в стране, гласных и согласных живут рыбные тексты. Буквоград всеми имеет маленький возвращайся жаренные, маленькая не продолжил над дорогу она большого ему они моей осталось языкового взгляд коварный.</div>
 				    </div>
 				  </div>
 
 				  <div class='v-facts__item'>
 				    <img src='img/rus.png'>
 						<div class='v-facts__desc'>
-							<div class='v-facts__text'>Считается, что порог дома обладает символической силой, поэтому вампир не может его переступить без приглашения хозяина дома.</div>
+							<div class='v-facts__text v-fade'>Считается, что порог дома обладает символической силой, поэтому вампир не может его переступить без приглашения хозяина дома.</div>
 				    </div>
 					</div>
 
 					<div class='v-facts__item'>
 						<img src='img/obor.png'>
 						<div class='v-facts__desc'>
-							<div class='v-facts__text'>Далеко-далеко за словесными горами в стране, гласных и согласных живут рыбные тексты. Приставка собрал оксмокс власти он раз, себя. Все, которой большой безорфографичный за последний, дал однажды ручеек рукопись не знаках подзаголовок.</div>
+							<div class='v-facts__text v-fade'>Далеко-далеко за словесными горами в стране, гласных и согласных живут рыбные тексты. Приставка собрал оксмокс власти он раз, себя. Все, которой большой безорфографичный за последний, дал однажды ручеек рукопись не знаках подзаголовок.</div>
 						</div>
 					</div>
 
 					<div class='v-facts__item'>
-						<img src='img/vamp2.png'>
+						<img src='img/v2.png'>
 						<div class='v-facts__desc'>
-							<div class='v-facts__text'>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Id maxime aliquam, laboriosam voluptatem repellat officiis libero exercitationem tempore suscipit quibusdam, consequatur perspiciatis eligendi sint ab vel cum expedita quae? Totam.</div>
+							<div class='v-facts__text v-fade'>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Id maxime aliquam, laboriosam voluptatem repellat officiis libero exercitationem tempore suscipit quibusdam, consequatur perspiciatis eligendi sint ab vel cum expedita quae? Totam.</div>
 						</div>
 					</div>
 
@@ -194,43 +211,36 @@
 
 			<div class='v-slider'>
 					<div class='v-slider__item v-fade'>
-						<img src='img/slider2.png'>
 						<div class='v-slider__desc'>
 							<div class='v-slider__text'>Если вампиры, пьющие кровь, все-таки скорее элемент мифологии и фольклора. Чем обычной жизни, то в существовании энергетических вампиров усомнятся разве что отъявленные скептики.</div>
 						</div>
 					</div>
 					<div class='v-slider__item v-fade'>
-						<img src='img/dem.png'>
 						<div class='v-slider__desc'>
 							<div class='v-slider__text'>Считается, что порог дома обладает символической силой, поэтому вампир не может его переступить без приглашения хозяина дома.</div>
 						</div>
 					</div>
 					<div class='v-slider__item v-fade'>
-						<img src='img/vamp.png'>
 						<div class='v-slider__desc'>
 							<div class='v-slider__text'>Считается, что порог дома обладает символической силой, поэтому вампир не может его переступить без приглашения хозяина дома.</div>
 						</div>
 					</div>
 					<div class='v-slider__item v-fade'>
-						<img src='img/vamp2.png'>
 						<div class='v-slider__desc'>
 							<div class='v-slider__text'>Считается, что порог дома обладает символической силой, поэтому вампир не может его переступить без приглашения хозяина дома.</div>
 						</div>
 					</div>
 					<div class='v-slider__item v-fade'>
-						<img src='img/slider2.png'>
 						<div class='v-slider__desc'>
 							<div class='v-slider__text'>Считается, что порог дома обладает символической силой, поэтому вампир не может его переступить без приглашения хозяина дома.</div>
 						</div>
 					</div>
 					<div class='v-slider__item v-fade'>
-						<img src='img/obor.png'>
 						<div class='v-slider__desc'>
 							<div class='v-slider__text'>Если вампиры, пьющие кровь, все-таки скорее элемент мифологии и фольклора. Чем обычной жизни, то в существовании энергетических вампиров усомнятся разве что отъявленные скептики.</div>
 						</div>
 					</div>
 					<div class='v-slider__item v-fade'>
-						<img src='img/vamp2.png'>
 						<div class='v-slider__desc'>
 							<div class='v-slider__text'>Считается, что порог дома обладает символической силой, поэтому вампир не может его переступить без приглашения хозяина дома.</div>
 						</div>
