--- a/index.html
+++ b/index.html
@@ -675,7 +675,7 @@
 				</div>
 			</div>
 
-			<div class="v-block v-test-result__content v-fade" id="test-result2" style="display:none;">
+			<div class="v-block v-test-result__content v-fade" id="test-result2">
 				<h2 class='v-block__title v-test-result__title'>Вы &mdash; Оборотень</h2>
 				<div class="v-test-result__img">
 					<img src="img/test-result2.png" alt="">
@@ -697,7 +697,7 @@
 				</div>
 			</div>
 
-			<div class="v-block v-test-result__content v-fade" id="test-result3" style="display:none;">
+			<div class="v-block v-test-result__content v-fade" id="test-result3">
 				<h2 class='v-block__title v-test-result__title'>Вы &mdash; Одержимый</h2>
 				<div class="v-test-result__img">
 					<img src="img/test-result3.png" alt="">
@@ -719,7 +719,7 @@
 				</div>
 			</div>
 
-			<div class="v-block v-test-result__content v-fade" id="test-result4" style="display:none;">
+			<div class="v-block v-test-result__content v-fade" id="test-result4">
 				<h2 class='v-block__title v-test-result__title'>Вы &mdash; Ангел-хранитель</h2>
 				<div class="v-test-result__img">
 					<img src="img/test-result4.png" alt="">
