--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
 				<div class='v-decor-line'></div>
 			</div>
 
-			<form method="POST" id="v-test__form" action="javascript:void(null);">
+			<form method="POST" action="result.php" id="v-test__form" >
 
 	      <div class="v-test__main animated fadeIn" id="v-question-one" style="display:block;">
 					<div class="v-test__question">
