--- a/index.html
+++ b/index.html
@@ -368,25 +368,25 @@
 						<div class="v-test__answers">
 	          <div class="v-test__answer">
 	            <div>
-		            <input type="radio" name="answer" id="answer-1" class="v-test-btn js-answer-btn"/>
+		            <input type="radio" name="answer[1]" value="1" id="answer-1" class="v-test-btn js-answer-btn"/>
 		            <label for="answer-1">Ночь! Когда на город опускается тьма, я чувстую необычайный прилив сил. Обожаю пустынные улицы, освещенные только светом луны. </label>
 	            </div>
 	          </div>
 	          <div class="v-test__answer">
 	            <div>
-		            <input type="radio" name="answer" id="answer-2" class="v-test-btn js-answer-btn"/>
+		            <input type="radio" name="answer[1]" value="2" id="answer-2" class="v-test-btn js-answer-btn"/>
 		            <label for="answer-2">Сумерки. В них таится что-то загадочное. Дневной свет угасает, но ночь еще не вступила в свои права. В это короткое время суток таит в себе множество возможностей. </label>
 	            </div>
 	          </div>
 	          <div class="v-test__answer">
 	            <div>
-		            <input type="radio" name="answer" id="answer-3" class="v-test-btn js-answer-btn"/>
+		            <input type="radio" name="answer[1]" value="3" id="answer-3" class="v-test-btn js-answer-btn"/>
 		            <label for="answer-3">Все зависит от моего настроения, погоды и времени года. Я и сама не знаю, когда на меня может накатить хандра, а когда – безудержное веселье.</label>
 	            </div>
 	          </div>
 						<div class="v-test__answer">
 							<div>
-								<input type="radio" name="answer" id="answer-4" class="v-test-btn js-answer-btn"/>
+								<input type="radio" name="answer[1]" value="4" id="answer-4" class="v-test-btn js-answer-btn"/>
 								<label for="answer-4">Я – дневная пташка. Солнце дарит мне силу. Даже, когда оно скрывается за облаками, я ощущаю его присутствие. </label>
 							</div>
 						</div>
@@ -400,25 +400,25 @@
 						<div class="v-test__answers">
 						<div class="v-test__answer">
 							<div>
-								<input type="radio" name="answer" id="answer-5" class="v-test-btn js-answer-btn"/>
+								<input type="radio" name="answer[2]" value="1" id="answer-5" class="v-test-btn js-answer-btn"/>
 								<label for="answer-5">Им не понять меня. Да мне бы этого и не хотелось. Оставаясь загадкой, мне легче управлять ими и подчинять своей воле. </label>
 							</div>
 						</div>
 						<div class="v-test__answer">
 							<div>
-								<input type="radio" name="answer" id="answer-6" class="v-test-btn js-answer-btn"/>
+								<input type="radio" name="answer[2]" value="2" id="answer-6" class="v-test-btn js-answer-btn"/>
 								<label for="answer-6">Иногда я чувствую себя очень одинокой в толпе. Но все меняется, когда я в кругу своих друзей.</label>
 							</div>
 						</div>
 						<div class="v-test__answer">
 							<div>
-								<input type="radio" name="answer" id="answer-7" class="v-test-btn js-answer-btn"/>
+								<input type="radio" name="answer[2]" value="3" id="answer-7" class="v-test-btn js-answer-btn"/>
 								<label for="answer-7">Я такая же, как все. Уверена, где-то есть человек, который сможет прочесть меня, как раскрытую книгу.</label>
 							</div>
 						</div>
 						<div class="v-test__answer">
 							<div>
-								<input type="radio" name="answer" id="answer-8" class="v-test-btn js-answer-btn"/>
+								<input type="radio" name="answer[2]" value="4" id="answer-8" class="v-test-btn js-answer-btn"/>
 								<label for="answer-8">Я люблю людей и стараюсь видеть в них хорошее. Конечно, иногда они меня огрочают, но это не повод терять оптимизм. </label>
 							</div>
 						</div>
@@ -432,25 +432,25 @@
 						<div class="v-test__answers">
 						<div class="v-test__answer">
 							<div>
-								<input type="radio" name="answer" id="answer-9" class="v-test-btn js-answer-btn"/>
+								<input type="radio" name="answer[3]" value="1" id="answer-9" class="v-test-btn js-answer-btn"/>
 								<label for="answer-9">Изгои и одиночки. Непризнанные гении, а иногда и харизматичные злодеи. Они гораздо интереснее скучных положительных героев. </label>
 							</div>
 						</div>
 						<div class="v-test__answer">
 							<div>
-								<input type="radio" name="answer" id="answer-10" class="v-test-btn js-answer-btn"/>
+								<input type="radio" name="answer[3]" value="2" id="answer-10" class="v-test-btn js-answer-btn"/>
 								<label for="answer-10">Мои любимые истории – о людях, которые смогли измениться и перебороть собственные слабости и страхи. </label>
 							</div>
 						</div>
 						<div class="v-test__answer">
 							<div>
-								<input type="radio" name="answer" id="answer-11" class="v-test-btn js-answer-btn"/>
+								<input type="radio" name="answer[3]" value="3" id="answer-11" class="v-test-btn js-answer-btn"/>
 								<label for="answer-11">Я предпочитаю реальные истории и героев, на чьем месте я могла бы себя представить. </label>
 							</div>
 						</div>
 						<div class="v-test__answer">
 							<div>
-								<input type="radio" name="answer" id="answer-12" class="v-test-btn js-answer-btn"/>
+								<input type="radio" name="answer[3]" value="4" id="answer-12" class="v-test-btn js-answer-btn"/>
 								<label for="answer-12">Люблю читать про самоотверженных героев, которые всем готовы пожертвовать ради высшей светлой цели. </label>
 							</div>
 						</div>
@@ -464,25 +464,25 @@
 						<div class="v-test__answers">
 	          <div class="v-test__answer">
 	            <div>
-		            <input type="radio" name="answer" id="answer-13" class="v-test-btn js-answer-btn"/>
+		            <input type="radio" name="answer[4]" value="1" id="answer-13" class="v-test-btn js-answer-btn"/>
 		            <label for="answer-13">Мстительность. Хотя в глубине души я не считаю это недостатком. Никто не причинит мне вреда и уйти безнаказанным. </label>
 	            </div>
 	          </div>
 	          <div class="v-test__answer">
 	            <div>
-		            <input type="radio" name="answer" id="answer-14" class="v-test-btn js-answer-btn"/>
+		            <input type="radio" name="answer[4]" value="2" id="answer-14" class="v-test-btn js-answer-btn"/>
 		            <label for="answer-14">Импульсивность. Часто я принимаю решения, о которых потом жалею.</label>
 	            </div>
 	          </div>
 	          <div class="v-test__answer">
 	            <div>
-		            <input type="radio" name="answer" id="answer-15" class="v-test-btn js-answer-btn"/>
+		            <input type="radio" name="answer[4]" value="3" id="answer-15" class="v-test-btn js-answer-btn"/>
 		            <label for="answer-15">Нерешительность. Я постоянно взвешиваю все «за» и «против» и часто остаюсь ни с чем.</label>
 	            </div>
 	          </div>
 						<div class="v-test__answer">
 							<div>
-								<input type="radio" name="answer" id="answer-16" class="v-test-btn js-answer-btn"/>
+								<input type="radio" name="answer[4]" value="4" id="answer-16" class="v-test-btn js-answer-btn"/>
 								<label for="answer-16">Я слишком добрая и никому не могу отказать, нередко люди пользуются этим.</label>
 							</div>
 						</div>
@@ -496,25 +496,25 @@
 						<div class="v-test__answers">
 						<div class="v-test__answer">
 							<div>
-								<input type="radio" name="answer" id="answer-17" class="v-test-btn js-answer-btn"/>
+								<input type="radio" name="answer[5]" value="1" id="answer-17" class="v-test-btn js-answer-btn"/>
 								<label for="answer-17">Я – эффектная девушка и своими нарядами стараюсь это подчеркнуть. В конце концов встречают-то по одежке!</label>
 							</div>
 						</div>
 						<div class="v-test__answer">
 							<div>
-								<input type="radio" name="answer" id="answer-18" class="v-test-btn js-answer-btn"/>
+								<input type="radio" name="answer[5]" value="2" id="answer-18" class="v-test-btn js-answer-btn"/>
 								<label for="answer-18">Я еще не нашла свой стиль, поэтому в моем гардеробе куча вещей, не сочетающихся друг с другом. Каждый день мне хочется быть кем-то другим...</label>
 							</div>
 						</div>
 						<div class="v-test__answer">
 							<div>
-								<input type="radio" name="answer" id="answer-19" class="v-test-btn js-answer-btn"/>
+								<input type="radio" name="answer[5]" value="3" id="answer-19" class="v-test-btn js-answer-btn"/>
 								<label for="answer-19">Я спокойно отношусь к одежде. Главное для меня – комфорт. </label>
 							</div>
 						</div>
 						<div class="v-test__answer">
 							<div>
-								<input type="radio" name="answer" id="answer-20" class="v-test-btn js-answer-btn"/>
+								<input type="radio" name="answer[5]" value="4" id="answer-20" class="v-test-btn js-answer-btn"/>
 								<label for="answer-20">Предпочитаю спокойные расцветки и нежную элегантность. </label>
 							</div>
 						</div>
@@ -528,25 +528,25 @@
 						<div class="v-test__answers">
 						<div class="v-test__answer">
 							<div>
-								<input type="radio" name="answer" id="answer-21" class="v-test-btn js-answer-btn"/>
+								<input type="radio" name="answer[6]" value="1" id="answer-21" class="v-test-btn js-answer-btn"/>
 								<label for="answer-21">Умение летать.</label>
 							</div>
 						</div>
 						<div class="v-test__answer">
 							<div>
-								<input type="radio" name="answer" id="answer-22" class="v-test-btn js-answer-btn"/>
+								<input type="radio" name="answer[6]" value="2" id="answer-22" class="v-test-btn js-answer-btn"/>
 								<label for="answer-22">Превращаться в любых животных и других людей. </label>
 							</div>
 						</div>
 						<div class="v-test__answer">
 							<div>
-								<input type="radio" name="answer" id="answer-23" class="v-test-btn js-answer-btn"/>
+								<input type="radio" name="answer[6]" value="3" id="answer-23" class="v-test-btn js-answer-btn"/>
 								<label for="answer-23">Останавливать время.</label>
 							</div>
 						</div>
 						<div class="v-test__answer">
 							<div>
-								<input type="radio" name="answer" id="answer-24" class="v-test-btn js-answer-btn"/>
+								<input type="radio" name="answer[6]" value="4" id="answer-24" class="v-test-btn js-answer-btn"/>
 								<label for="answer-24">Лечить людей одним прикосновением. </label>
 							</div>
 						</div>
@@ -560,25 +560,25 @@
 						<div class="v-test__answers">
 	          <div class="v-test__answer">
 	            <div>
-		            <input type="radio" name="answer" id="answer-25" class="v-test-btn js-answer-btn"/>
+		            <input type="radio" name="answer[7]" value="1" id="answer-25" class="v-test-btn js-answer-btn"/>
 		            <label for="answer-25">Появляетесь последней, но тут же оказываетесь в центре внимания.</label>
 	            </div>
 	          </div>
 	          <div class="v-test__answer">
 	            <div>
-		            <input type="radio" name="answer" id="answer-26" class="v-test-btn js-answer-btn"/>
+		            <input type="radio" name="answer[7]" value="2" id="answer-26" class="v-test-btn js-answer-btn"/>
 		            <label for="answer-26">Не знаете, к какой группе примкнуть и в итоге успеваете пообщаться со всеми. </label>
 	            </div>
 	          </div>
 	          <div class="v-test__answer">
 	            <div>
-		            <input type="radio" name="answer" id="answer-27" class="v-test-btn js-answer-btn"/>
+		            <input type="radio" name="answer[7]" value="3" id="answer-27" class="v-test-btn js-answer-btn"/>
 		            <label for="answer-27">Стоит в уголочке, наблюдая за весельем. </label>
 	            </div>
 	          </div>
 						<div class="v-test__answer">
 							<div>
-								<input type="radio" name="answer" id="answer-28" class="v-test-btn js-answer-btn"/>
+								<input type="radio" name="answer[7]" value="4" id="answer-28" class="v-test-btn js-answer-btn"/>
 								<label for="answer-28">Помогаете накрывать на стол и следите, чтобы у всех гостей были напитки. </label>
 							</div>
 						</div>
@@ -592,25 +592,25 @@
 						<div class="v-test__answers">
 						<div class="v-test__answer">
 							<div>
-								<input type="radio" name="answer" id="answer-29" class="v-test-btn js-answer-btn"/>
+								<input type="radio" name="answer[8]" value="1" id="answer-29" class="v-test-btn js-answer-btn"/>
 								<label for="answer-29">По древним замкам Европы.</label>
 							</div>
 						</div>
 						<div class="v-test__answer">
 							<div>
-								<input type="radio" name="answer" id="answer-30" class="v-test-btn js-answer-btn"/>
+								<input type="radio" name="answer[8]" value="2" id="answer-30" class="v-test-btn js-answer-btn"/>
 								<label for="answer-30">В какое-нибудь дикое место, куда не ступала нога человека.</label>
 							</div>
 						</div>
 						<div class="v-test__answer">
 							<div>
-								<input type="radio" name="answer" id="answer-31" class="v-test-btn js-answer-btn"/>
+								<input type="radio" name="answer[8]" value="3" id="answer-31" class="v-test-btn js-answer-btn"/>
 								<label for="answer-31">Да куда-угодно, лишь бы билеты были недорогие и уютный отель. </label>
 							</div>
 						</div>
 						<div class="v-test__answer">
 							<div>
-								<input type="radio" name="answer" id="answer-32" class="v-test-btn js-answer-btn"/>
+								<input type="radio" name="answer[8]" value="4" id="answer-32" class="v-test-btn js-answer-btn"/>
 								<label for="answer-32">В Диснейленд, чтобы прокатиться на всех аттракционах. </label>
 							</div>
 						</div>
@@ -624,25 +624,25 @@
 						<div class="v-test__answers">
 						<div class="v-test__answer">
 							<div>
-								<input type="radio" name="answer" id="answer-33" class="v-test-btn js-answer-btn"/>
+								<input type="radio" name="answer[9]" value="1" id="answer-33" class="v-test-btn js-answer-btn"/>
 								<label for="answer-33">Конечно! Во мне самой есть что-то такое, от чего мне иногда становится жутко!</label>
 							</div>
 						</div>
 						<div class="v-test__answer">
 							<div>
-								<input type="radio" name="answer" id="answer-34" class="v-test-btn js-answer-btn"/>
+								<input type="radio" name="answer[9]" value="2" id="answer-34" class="v-test-btn js-answer-btn"/>
 								<label for="answer-34">Обычно я довольно прагматична, но в моей жизни было несколько случаев, которые заставили меня сомневаться и верить, что в мире есть что-то, неподвластное нашему пониманию. </label>
 							</div>
 						</div>
 						<div class="v-test__answer">
 							<div>
-								<input type="radio" name="answer" id="answer-35" class="v-test-btn js-answer-btn"/>
+								<input type="radio" name="answer[9]" value="3" id="answer-35" class="v-test-btn js-answer-btn"/>
 								<label for="answer-35">Я много читала о сверхъестественном, но сама никогда не сталкивалась.</label>
 							</div>
 						</div>
 						<div class="v-test__answer">
 							<div>
-								<input type="radio" name="answer" id="answer-36" class="v-test-btn js-answer-btn"/>
+								<input type="radio" name="answer[9]" value="4" id="answer-36" class="v-test-btn js-answer-btn"/>
 								<label for="answer-36">Я верю, что у каждого из нас есть ангел-хранитель. </label>
 							</div>
 						</div>
